--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@capacitor/android": "^3.1.2",
     "@capacitor/app": "1.0.2",
-    "@capacitor/core": "3.0.2",
+    "@capacitor/core": "^3.1.2",
+    "@capacitor/geolocation": "^1.0.2",
     "@capacitor/haptics": "1.0.2",
+    "@capacitor/ios": "^3.1.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/angular": "^5.5.2",
+    "capacitor": "^0.5.5",
     "mapbox-gl": "^2.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -40,7 +44,7 @@
     "@angular/compiler": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.0.2",
+    "@capacitor/cli": "^3.1.2",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
